Implémentatino de la première activité.
Sur un click sur un Gc, affichage des informations